@@ -1,6 +1,7 @@
 package com.felixpessoa.dlist.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -11,13 +12,15 @@ import com.felixpessoa.dlist.repository.GameRepository;
 
 @Service
 public class GameService {
-    
+
     @Autowired
     private GameRepository gameRepository;
 
-    public List<GameMinDTO> findAll(){
+    public List<GameMinDTO> findAll() {
         List<Game> result = gameRepository.findAll();
-        return result.stream().map(x -> new GameMinDTO(x)).toList();
+        return result.stream()
+                .map(x -> new GameMinDTO(x))
+                .collect(Collectors.toList());
     }
 
 }
